[package]
name = "cargo-fix"
version = "0.2.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "Apache-2.0/MIT"
name = "rustfix"
description = "Automatically apply the suggestions made by rustc"
repository = "https://github.com/killercup/rustfix"
documentation = "https://docs.rs/rustfix"
readme = "README.md"

[dependencies]
clap = "2.9.2"
colored = "1.2.0"
quick-error = "1.2.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustfix = "0.1.0"
