[package]
name = "cargo-fix"
version = "0.2.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
license = "Apache-2.0/MIT"
description = "Automatically apply the suggestions made by rustc"
repository = "https://github.com/killercup/rustfix"
documentation = "https://docs.rs/rustfix"
readme = "README.md"

[[bin]]
name = "cargo-fix"
test = false

[dependencies]
failure = "0.1"
rustfix = { path = "..", version = "0.2" }
serde_json = "1"
log = "0.4"

[dev-dependencies]
difference = "2"
url = "1"
