[package]
name = "cargo-fix"
version = "0.2.0"
authors = [
    "Pascal Hertleif <killercup@gmail.com>",
    "Alex Crichton <alex@alexcrichton.com>",
]
license = "Apache-2.0/MIT"
description = "Automatically apply the suggestions made by rustc"
repository = "https://github.com/rust-lang-nursery/rustfix"
documentation = "https://docs.rs/rustfix"
readme = "README.md"

[[bin]]
name = "cargo-fix"
test = false

[dependencies]
failure = "0.1"
rustfix = { path = "..", version = "0.3" }
serde_json = "1"
log = "0.4"
env_logger = { version = "0.5", default-features = false }
clap = "2.31"
termcolor = "0.3.6"
atty = "0.2.10"
serde_derive = "1.0.45"
serde = "1.0.45"

[dev-dependencies]
difference = "2"
url = "1"
