[package]
name = "capture"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool for capturing a real-world workspace for benchmarking."
publish = false

[dependencies]
cargo_metadata.workspace = true
flate2.workspace = true
tar.workspace = true
toml.workspace = true
