[package]
name = "cargo-platform"
version = "0.1.7"
edition.workspace = true
license.workspace = true
rust-version = "1.70.0"  # MSRV:3
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/cargo-platform"
description = "Cargo's representation of a target platform."

[dependencies]
serde.workspace = true

[lints]
workspace = true
