[package]
name = "cargo-test-macro"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://github.com/rust-lang/cargo"
description = "Helper proc-macro for Cargo's testsuite."

[lib]
proc-macro = true

[lints]
workspace = true
