[package]
name = "cargo-test-support"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
cargo-test-macro.workspace = true
cargo-util.workspace = true
crates-io.workspace = true
filetime.workspace = true
flate2.workspace = true
git2.workspace = true
glob.workspace = true
itertools.workspace = true
lazy_static.workspace = true
pasetors.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snapbox.workspace = true
tar.workspace = true
termcolor.workspace = true
time.workspace = true
toml.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }
