[package]
name = "cargo-test-support"
version = "0.9.1"
edition.workspace = true
rust-version = "1.91"  # MSRV:1
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Testing framework for Cargo's testsuite."

[dependencies]
anstream.workspace = true
anstyle.workspace = true
anyhow.workspace = true
cargo-test-macro.workspace = true
cargo-util.workspace = true
crates-io.workspace = true
filetime.workspace = true
flate2.workspace = true
git2.workspace = true
glob.workspace = true
itertools.workspace = true
pasetors.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snapbox.workspace = true
tar.workspace = true
time.workspace = true
toml = { workspace = true, features = ["display", "serde"] }
url.workspace = true
walkdir.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }

[lints]
workspace = true
