[package]
name = "cargo-util-schemas"
version = "0.7.0"
rust-version = "1.81"  # MSRV:1
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Deserialization schemas for Cargo"

[dependencies]
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-untagged.workspace = true
serde-value.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-xid.workspace = true
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
snapbox.workspace = true
