[package]
name = "cargo-util-schemas"
version = "0.10.3"
rust-version = "1.91"  # MSRV:1
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Deserialization schemas for Cargo"

[dependencies]
schemars = { workspace = true, features = ["preserve_order", "semver1"], optional = true }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde-untagged.workspace = true
serde-value.workspace = true
thiserror.workspace = true
toml = { workspace = true, features = ["serde"] }
unicode-ident.workspace = true
url.workspace = true

[lints]
workspace = true

[dev-dependencies]
snapbox.workspace = true
serde_json.workspace = true

[features]
unstable-schema = ["dep:schemars", "dep:serde_json"]
