[package]
name = "cargo-util-terminal"
version = "0.1.0"
rust-version = "1.94"  # MSRV:1
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cargo's terminal rendering"

[dependencies]
annotate-snippets.workspace = true
anstyle.workspace = true
anyhow.workspace = true

[lints]
workspace = true
